0003 配置增加 （1）增加了组配置 （2）优化了系统配置 （3）新增数据表

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -19,4 +19,13 @@ my-webclient:
   enableJavaScript: true
   enableCss: true
   version:
+mybatis-plus:
+  mapper-locations: org.leetcode.fntp.mapper
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      logic-delete-field: isEnable
+      logic-not-delete-value: 1
+      logic-delete-value: 0
 
