0015 新增SpringSecurity鉴权服务 （1）新增SpringSecurity鉴权服务

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -27,6 +27,13 @@ mybatis-plus:
       logic-delete-field: isEnable
       logic-not-delete-value: 1
       logic-delete-value: 0
+jwt:
+  tokenHeader: Authorization
+  secret: codewithme-secret-jwt
+  salt: 999957
+  expiration: 7
+  tokenHead: 'codeWithMe'
+  sign: 'codeWithMeFntp'
 secure:
   ignored:
     urls: #安全路径白名单
